--- a/index.html
+++ b/index.html
@@ -9,63 +9,37 @@
       href="https://fonts.googleapis.com/csss?family=Work+Sans:300,400,700,900&display=swap"
     />
     <link rel="stylesheet" href="css/main.css" />
+    <script defer src="script.js"></script>
   </head>
   <body>
     <h1 class="title">Stuff I need to do</h1>
     <div class="all-tasks">
       <h2 class="task-list-title">My lists</h2>
-      <ul class="task-list">
-        <li class="list-name active-list">Youtube</li>
-        <li class="list-name">Work</li>
-        <li class="list-name">Grocery</li>
-      </ul>
-      <form action="">
+      <ul class="task-list" data-lists></ul>
+      <form action="" data-new-list-form>
         <input
           type="text"
           class="new list"
+          data-new-list-input
           placeholder="new list name"
           aria-label="new list name"
         />
         <button class="btn create" aria-label="create new list">+</button>
       </form>
     </div>
-    <div class="todo-list">
+    <div class="todo-list" data-list-display-container>
       <div class="todo-header">
-        <h2 class="list-title">Youtube</h2>
-        <p class="task-count">3 tasks remaining</p>
+        <h2 class="list-title" data-list-title>Youtube</h2>
+        <p class="task-count" data-list-count>3 tasks remaining</p>
       </div>
       <div class="todo-body">
-        <div class="tasks">
-          <div class="task">
-            <input type="checkbox" id="task-1" />
-            <label for="task-1">
-              <span class="custom-checkbox"></span>
-              record todo list video
-            </label>
-          </div>
-          <!-- Task-1 ends -->
-          <div class="task">
-            <input type="checkbox" id="task-2" />
-            <label for="task-2">
-              <span class="custom-checkbox"></span>
-              edit todo list video
-            </label>
-          </div>
-          <!-- Task-2 ends -->
-          <div class="task">
-            <input type="checkbox" id="task-3" />
-            <label for="task-3">
-              <span class="custom-checkbox"></span>
-              publish todo list video
-            </label>
-          </div>
-          <!-- Task-3 ends -->
-        </div>
+        <div class="tasks" data-tasks></div>
         <div class="new-task-creator">
-          <form action="">
+          <form action="" data-new-task-form>
             <input
               type="text"
               class="new task"
+              data-new-task-input
               placeholder="new task name"
               aria-label="new task name"
             />
@@ -73,10 +47,20 @@
           </form>
         </div>
         <div class="delete-stuff">
-          <buton class="btn delete">Clear completed tasks</buton>
-          <buton class="btn delete">Delete List</buton>
+          <buton class="btn delete" data-clear-complete-tasks-button
+            >Clear completed tasks</buton
+          >
+          <buton class="btn delete" data-delete-list-button>Delete List</buton>
         </div>
       </div>
     </div>
+    <template id="task-template">
+      <div class="task">
+        <input type="checkbox" />
+        <label>
+          <span class="custom-checkbox"></span>
+        </label>
+      </div>
+    </template>
   </body>
 </html>
